@startuml
' Controllers and UndoManager. Logic is separated from UI: controllers know
' nothing about services.
' Regenerated from code: uv run pyreverse src -o puml -p yetee -d docs/diagrams/generated
'
' Контроллеры и UndoManager. Раздельная логика от UI: контроллеры не знают про
' сервисы.
' Регенерируется из кода: uv run pyreverse src -o puml -p yetee -d docs/diagrams/generated

skinparam classAttributeIconSize 0
hide empty members

class TableController {
  - page : ft.Page
  - _field_defs : list[FieldDef]
  - _flag_names : list[str]
  - _col_widths : list[int]
  + render(rows, filtered, page_idx)
  + sync_back(rows, filtered, page_idx)
  + clear()
}
class SearchController {
  + query : str (ro)
  + filter_rows(rows) : list[int]
}
class PaginationController {
  + page_index : int
  + page_size : int
  + total_pages(total_items) : int
  + visible_range(total_items) : tuple[int,int]
}
class DirtyStateManager {
  + is_dirty : bool
  + mark_dirty()
  + mark_clean()
  + reset()
}
class UndoManager {
  - _undo_stack : list[list[RowSnapshot]]
  - _redo_stack : list[list[RowSnapshot]]
  + take_snapshot(rows) : list[RowSnapshot]
  + can_undo() / can_redo()
  + undo() / redo()
}
class RowSnapshot {
  values : dict[str,str]
  flags : dict[str,str]
}

' Flet-free settings state owned by the App facade (src/main.py)
class SettingsManager {
  + selected_theme / selected_language : str
  + check_updates / show_unhandled_mod_editors : bool
  + apply_startup(values)
  + save(key, value) : async
  + set_theme(value) / set_language(value) : bool (async)
  + set_check_updates(value) / set_unhandled_editors(value) : async
  + set_fun_flag(key, value) : async
}
interface SettingsStore
interface EntertainmentFlags
note right of SettingsStore
  implemented by SettingsService
end note
note right of EntertainmentFlags
  implemented by EntertainmentService
end note

class FileSession {
  + path : str | None
  + rows : list[RowData]
  + filtered : list[int]
  + selected_row_idx : int | None
  + selected_row_indices : set[int]
  + dirty : bool (ro)
  + page_index : int
  + can_undo / can_redo : bool (ro)
  + load_setup(path) / clear_all()
  + apply_filter(query, case_sensitive, filters)
  + refilter() / reset_page() / prev_page() / next_page() / clamp()
  + add_type() : bool
  + delete_selected() : bool
  + randomize(indices)
  + batch_apply_field(key, value) / batch_apply_chipset(key, parts) / batch_apply_flag(name, value)
  + undo() / redo() : bool
  + save() / save_async()
}
class RandomizeCommand {
  + execute()
}
class SaveCommand {
  + execute() / execute_async()
}

' Command pattern: central app commands (CommandRegistry + Observer), see src/commands/
interface IAppCommand {
  + command_id : str (ro)
  + title : str (ro)
  + enabled : bool (ro)
  + execute()
}
class AppCommand implements IAppCommand {
  + command_id : str (ro)
  + title : str (ro)  (dynamic via title_fn)
  + enabled : bool (ro)  (dynamic via enabled_fn)
  + execute()
  + __init__(command_id, title, handler, enabled_fn=None, title_fn=None)
}
class CommandRegistry {
  + register(command)
  + get(id) : IAppCommand | None
  + all() : list[IAppCommand]
  + execute(id)
  + subscribe(listener)
  + refresh()
}
class CommandMenuBar {
  + control : ft.MenuBar
  + refresh()
  + _build_group(spec) / _build_item(spec)
}
note right of CommandRegistry
  App._register_commands() (src/main.py) builds AppCommand
  wrappers over shell / project_flow / remote_flow /
  economy_editor methods and attaches CommandMenuBar to
  the shell title row (shell.attach_menu_bar).
end note
CommandMenuBar ..> CommandRegistry : "subscribes (Observer) + execute(id)"
CommandRegistry o-- IAppCommand
CommandMenuBar ..> IAppCommand : "reads title/enabled"
' Displays rebind their buttons to registry.execute(id) via _bind()
FileDisplay ..> CommandRegistry
EventDisplay ..> CommandRegistry
SettingsTableDisplay ..> CommandRegistry
FormDisplay ..> CommandRegistry
' EconomyEditor routes current-entity commands to the active display
EconomyEditor ..> CommandRegistry

' FileDisplay and EventDisplay reuse several controllers
FileDisplay ..> FileSession
FileDisplay ..> TableController
FileDisplay ..> FilterMenu
FileDisplay ..> FunPresenter
FileSession ..> SearchController
FileSession ..> PaginationController
FileSession ..> DirtyStateManager
FileSession ..> UndoManager
FileSession ..> RandomizeCommand
FileSession ..> SaveCommand
EventDisplay ..> TableController
EventDisplay ..> UndoManager
SettingsManager ..> SettingsStore
SettingsManager ..> EntertainmentFlags
AppShell ..> CommandRegistry : "refresh() on project open/close"

' FileDisplay и EventDisplay используют несколько контроллеров
TableController --> RowSnapshot : "handles / обрабатывает"
UndoManager --> RowSnapshot : "stores / хранит"
TableController --> FieldDef "FieldDef[]"

@enduml